=================
Changes for Crate
=================

Unreleased
==========

 - Added the ``KILL 'job_id'`` statement.

 - Fix: issuing ``KILL ALL`` when a ``SELECT`` statement hung due to a node
   becoming unavailable during execution could result in error response

 - Improved the error handling: In case threadpools are exhausted (due to very
   high load on the cluster) queries could get stuck instead of being aborted
   right away.

 - Fixed a bug with the kill of collectors when ``KILL ALL`` is called.

 - Fixed a bug where a job entry wasn't cleaned up on any parser/analyzer errors.

 - Fixed an issue that caused queries on blob tables to cause a
   NullPointerException if the filter in the WHERE CLAUSE resulted in a
   ``null`` value.

 - Fix: fixed an issue which caused an error if one selects a setting
   which is not set

 - Fix: fixed an issue which caused TypeConversion errors if a setting was
   selected which represents a byte size
   (e.g. indices[‘store’][‘throttle’][‘my_bytes_per_sec’])

 - Added support for unicast host discovery via EC2 API

 - BREAKING CHANGE
   Connections to AWS S3 for ``COPY FROM`` and ``COPY TO`` are now using HTTPS.
   If you have previously blocked outgoing connections on ``443``, please update
   your firewall settings!

 - Fixed a rare bug which could cause a MapperParsingException if one creates
   a new dynamic array concurrently

 - Improved handling of /_blobs REST URIs to prevent invalid URIs from being
   passed to main handler where they raise missleading error messages

 - Updated crate-admin to 0.14.2 which includes the following changes:

   - added support for line breaks in console result table

 - Added column policy as column to ``information_schema.tables`` table

 - Fix: column policy property was missing in SHOW CREATE TABLE result

 - Added SHOW CREATE TABLE statement to dump the schema of a user created table

 - Updated crash to 0.13.1 which contains following changes:
